# MLF

./: .gitignore  Author.md  Readme.md
machine_learning_framework/: CMakeLists.txt  MLF_FunctorFromTToT.h  MLF_InterfaceIO.h  MLF_NetworkBuilder.h  MLF_NetworkStorage.h  MLF_TestNetwork.h  lcmake.sh  main.cpp  wlcmake.bat
machine_learning_framework/Release/: machine_learning_framework.iobj  machine_learning_framework.ipdb
machine_learning_framework/machine_learning_framework/: export.txt  export68230.txt
machine_learning_framework/machine_learning_framework/Debug/: vc120.idb
machine_learning_framework/machine_learning_framework/Debug/machine_.02F62F26.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  machine_learning_framework.lastbuildstate
machine_learning_framework/src/: CMakeLists.txt  MLF_FunctorFromTToT.h  MLF_GeneticHandler.h  MLF_NetworkBuilder.h  MLF_NetworkStorage.h  RandomEngine.h  main.cpp  main_ex_1_test_1_NN.cpp  main_ex_2_new_NN_pop_with_genetic_selection.cpp  main_ex_3_NN_pop_imported_from_file_with_genetic_selection.cpp  quickFIleIO.h
machine_learning_framework/src/framework_headers/: FitnessFunctionInterface.h  GeneticBreeder.h  GeneticFunctionContainer.h  GeneticMutation.h  GeneticOptimizer.h  GeneticParametersContainer.h  GeneticVariablesContainer.h  MLF_FunctorFromTToT.h  MLF_GeneticHandler.h  MLF_InterfaceIO.h  MLF_InterfaceLayers.h  MLF_NetworkBuilder.h  MLF_NetworkStorage.h  MLF_TestNetwork.h  MLF_Utilities.h  quickFIleIO.h
(+7 files in other folders)
